src/objects/ECO_Portal_Graph_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Client_Care_Detractor__c</fullName>
        <label>Client Care Detractor #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Care_NPS_Text__c</fullName>
        <label>Client Care NPS Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Care_Passive__c</fullName>
        <label>Client Care Passive #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Care_Promoter__c</fullName>
        <label>Client Care Promoter #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incident_Rate_YTD_TCIR__c</fullName>
        <label>Incident Rate YTD TCIR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Apr_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Apr DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Apr_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Apr UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Aug_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Aug DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Aug_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Aug UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Dec_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Dec DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Dec_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Dec UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Feb_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Feb DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Feb_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Feb UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Jan_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Jan DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Jan_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Jan UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Jul_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Jul DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Jul_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Jul UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Jun_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Jun DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Jun_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Jun UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Mar_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Mar DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Mar_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Mar UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_May_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date May DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_May_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date May UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Nov_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Nov DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Nov_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Nov UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Oct_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Oct DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Oct_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Oct UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Sep_DL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Sep DL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitor_Date_Sep_UP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visitor Date Sep UP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ECO Portal Graph Settings</label>
</CustomObject>